examples/test/testpolicy13252.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13252
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key9: value11
      key2: value28
      key36: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value33
      podSelector:
        matchLabels:
          key14: value48
